# lol-meta-classes

./: .cursorignore  .dockerignore  AUTOMATION_SETUP.md  CLAUDE.md  Dockerfile  README.md
.github/workflows/: manual-sync.yml  sync-on-manifest-update.yml
crates/dumper/: Cargo.toml
crates/dumper/src/: main.rs  meta.rs  meta_dump.rs
crates/dumper/src/loader/: macho.rs  mod.rs
crates/dumper/stubs/src/: hack.c  stub.c  stub_sys.c
crates/lol-meta-schema/: Cargo.toml
crates/lol-meta-schema/src/: lib.rs
crates/lol-meta-schema/tests/: deserialize.rs
crates/meta-sync/: ARCHITECTURE.md  Cargo.toml  README.md
crates/meta-sync/src/: config.rs  dumper.rs  error.rs  github.rs  main.rs  manifest.rs
crates/rman/: Cargo.toml
crates/rman/src/: lib.rs
db/: database.py
docs/: database.md
hashes/: hashes.binfields.txt  hashes.bintypes.txt
scripts/: db_import.py  dump_meta.py
