[package]
name = "dumper"
version = "0.3.0"
authors = ["moonshadow565 <moonshadow565@hotmail.com>"]
edition = "2021"

[dependencies]
lol-meta-schema = { path = "../lol-meta-schema" }
anyhow = "1.0.80"
clap = { version = "4.0", features = ["derive"] }
goblin = { version = "0.8", default-features = false, features = [
    "std",
    "mach64",
] }
libc = "0.2.153"
lazy_static = "1.4.0"
mmap = "0.1.1"
regex = "1.10.3"
scroll = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[build-dependencies.cmake]
version = "0.1"
