[package]
name = "meta-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.44"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
reqwest = "0.12"
tempfile = "3.20.0"
rman = { path = "../rman" }
ureq = "2.11"
semver = "1.0.26"
thiserror = "2.0"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "test-dump"
path = "src/bin/test-dump.rs"
